--- a/index.html
+++ b/index.html
@@ -1,113 +1,330 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Model Slideshow Viewer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* ... (all previous styles remain the same) ... */
-        ::-webkit-scrollbar { width: 8px; }
-        ::-webkit-scrollbar-track { background: #2d3748; }
-        ::-webkit-scrollbar-thumb { background: #4a5568; border-radius: 4px; }
-        ::-webkit-scrollbar-thumb:hover { background: #718096; }
-        body { font-family: 'Inter', sans-serif; overscroll-behavior: none; }
+        :root {
+            --primary-bg: #fdf2f8;
+            --secondary-bg: #ffffff;
+            --tertiary-bg: #fce7f3;
+            --accent-color: #d946ef;
+            --accent-hover: #c026d3;
+            --text-color: #312e81;
+            --text-muted: #5b21b6;
+            --border-color: #e879f9;
+            /* Made border slightly more vibrant */
+            --selection-color: #fbcfe8;
+            --header-font: 'Dancing+Script', cursive;
+            --body-font: 'Quicksand', sans-serif;
+        }
+
+        /* --- Base & Typography --- */
+        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Quicksand:wght@500;700&display=swap');
+
+        ::-webkit-scrollbar {
+            /* Custom Scrollbar */
+            width: 10px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: var(--tertiary-bg);
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: var(--accent-color);
+            border-radius: 10px;
+            border: 2px solid var(--tertiary-bg);
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: var(--accent-hover);
+        }
+
+        body {
+            /* Base Body Styles */
+            font-family: var(--body-font);
+            background-color: var(--primary-bg);
+            color: var(--text-color);
+            overscroll-behavior: none;
+            font-weight: 500;
+        }
+
+        h1,
+        h2,
+        #current-model-title {
+            /* Header Font Application */
+            font-family: var(--header-font);
+            color: #be185d;
+            text-transform: none;
+            font-weight: 700;
+            text-shadow: none;
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            /* Specific Header 1 Size */
+        }
+
+        #current-model-title {
+            font-size: 2.2rem;
+            padding: 0.5rem 0;
+            /* Specific Current Model Title Size */
+        }
+
+        #models-list h2 {
+            font-family: var(--body-font);
+            text-transform: uppercase;
+            font-size: 1.2rem;
+            letter-spacing: 0.1em;
+            color: var(--text-muted);
+            font-weight: 700;
+        }
+
+        /* --- Layout & Containers --- */
+
+        header,
+        main,
+        .w-full.md\:w-1\/3,
+        .w-full.md\:w-2\/3,
+        #media-display-area,
+        #models-list li,
+        .action-button,
+        .nav-button,
+        .timer-button,
+        .timer-controls input[type="number"] {
+            /* Ensure no default box-shadows interfere */
+            box-shadow: none !important;
+            /* Use !important to override Tailwind defaults if necessary */
+        }
+
+        header {
+            /* Header Layout/Appearance */
+            background-color: var(--secondary-bg);
+            border-bottom: 2px solid var(--border-color);
+            box-shadow: 0 2px 8px var(--border-color);
+        }
+
+        main {
+            height: calc(100vh - 70px - 45px);
+            /* Calculate main content height */
+        }
+
+        .w-full.md\:w-1\/3,
+        .w-full.md\:w-2\/3 {
+            background-color: var(--secondary-bg);
+            border: 1px solid var(--border-color);
+            /* Apply consistent border and shadow to main panels */
+            border-radius: 20px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+        }
+
+        #media-display-area {
+            border: 2px dashed var(--border-color);
+            border-radius: 15px;
+            /* Added for flexible content and centering */
+            flex-grow: 1;
+            /* Allow it to take available space in the flex column */
+            display: flex;
+            /* To center its content (the image/video) */
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            /* To prevent any accidental overflow if content somehow breaks out */
+            position: relative;
+            /* Good practice for potential absolute positioned children later */
+            padding: 0;
+            /* Remove default padding that might interfere with media display */
+        }
+
+        /* --- Components --- */
+        /* Custom Checkbox Styling */
+        #models-list .toggle-label input[type="checkbox"] {
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            width: 20px;
+            height: 20px;
+            border: 2px solid var(--border-color);
+            border-radius: 5px;
+            background-color: var(--primary-bg);
+            cursor: pointer;
+            position: relative;
+            vertical-align: middle;
+            /* Better alignment with text */
+            transition: background-color 0.2s ease, border-color 0.2s ease;
+        }
+
+        #models-list .toggle-label input[type="checkbox"]:hover {
+            border-color: var(--accent-color);
+        }
+
+        #models-list .toggle-label input[type="checkbox"]:checked {
+            background-color: var(--accent-color);
+            border-color: var(--accent-hover);
+        }
+
+        #models-list .toggle-label input[type="checkbox"]:checked::after {
+            content: '✔';
+            color: white;
+            font-size: 16px;
+            font-weight: bold;
+            position: absolute;
+            top: -3px;
+            left: 2px;
+        }
+
+        /* Timer Controls Styling */
+        .timer-controls {
+            display: flex;
+            align-items: center;
+            /* Align items vertically */
+            gap: 8px;
+            /* Added gap for clarity */
+        }
+
+        .timer-controls input[type="number"] {
+            background-color: white;
+            border: 2px solid var(--border-color);
+            border-radius: 10px;
+            color: var(--text-color);
+            font-weight: 700;
+            width: 60px;
+            padding: 0.25rem 0.5rem;
+            text-align: center;
+        }
+
+        .timer-controls input[type="number"]:focus {
+            outline: none;
+            border-color: var(--accent-color);
+            box-shadow: 0 0 5px var(--accent-color);
+        }
+
+        /* Styles for media elements within the display area */
+        #media-display-area video {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+            /* Ensures full visibility and maintains aspect ratio */
+            display: block;
+            /* Removes extra space below inline images and helps with layout */
+        }
+
+        /* Added img specifically for clarity, though video rule above works */
+        #media-display-area img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+            display: block;
+        }
+
         #models-list li {
+            /* Model List Item Styling */
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 8px 12px;
-            border-radius: 0.375rem;
-            transition: background-color 0.2s ease-in-out;
-            border: 1px solid #374151; 
+            padding: 12px 18px;
+            border-radius: 10px;
+            transition: all 0.3s ease;
+            border: 1px solid transparent;
+            margin-bottom: 5px;
         }
-        #models-list li:hover, #models-list li.active-model-individual { 
-            background-color: #374151; 
+
+        #models-list li:hover {
+            /* Model List Item Hover State */
+            background-color: var(--selection-color);
+            border-color: var(--accent-color);
+            transform: translateX(5px);
         }
-         #models-list li.selected-for-global {
-            background-color: #4a5568; 
-            border-left: 4px solid #60a5fa; 
+
+        #models-list li.active-model-individual {
+            background-color: var(--selection-color);
+            /* Active Model State */
+            border: 1px solid var(--accent-color);
+            box-shadow: 0 0 10px var(--accent-color);
+            font-weight: 700;
         }
+
+        /* Selected for Global Slideshow State */
+        #models-list li.selected-for-global {
+            border-left: 6px solid var(--text-muted);
+        }
+
         #models-list .model-name-clickable {
             flex-grow: 1;
             cursor: pointer;
+            font-size: 1rem;
+            font-weight: 700;
+            color: var(--text-color);
         }
-        #models-list .model-controls {
-            display: flex;
-            align-items: center;
-            gap: 8px; 
+
+        /* Button Base Styles */
+        .action-button,
+        .nav-button,
+        .timer-button {
+            background-color: var(--accent-color);
+            color: white;
+            padding: 0.6rem 1.2rem;
+            border-radius: 30px;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.2s ease-in-out, transform 0.2s ease;
+            user-select: none;
+            font-size: 0.9rem;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            font-family: var(--body-font);
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
         }
+
+        .action-button:hover,
+        /* Button Hover States */
+        .nav-button:hover,
+        .timer-button:hover {
+            background-color: var(--accent-hover);
+            transform: scale(1.08);
+        }
+
+        .nav-button:disabled,
+        /* Button Disabled States */
+        .timer-button:disabled {
+            background-color: #e5e7eb;
+            color: #9ca3af;
+            cursor: not-allowed;
+            transform: none;
+            box-shadow: none;
+            text-shadow: none;
+        }
+
+        footer {
+            /* Footer Styling */
+            background-color: var(--secondary-bg);
+            border-top: 1px solid var(--border-color);
+            color: var(--text-muted);
+        }
+
+        /* --- Utility & Specific Adjustments --- */
         #models-list .toggle-label {
             font-size: 0.8rem;
             display: flex;
             align-items: center;
-            color: #a0aec0; 
+            color: var(--text-color);
+            font-weight: 700;
             cursor: pointer;
         }
-        #models-list .toggle-label input {
-            margin-left: 4px;
-            cursor: pointer;
-        }
-        #media-display-area img, #media-display-area video {
-            max-width: 100%;
-            max-height: calc(100% - 40px); 
-            object-fit: contain; 
-            border-radius: 0.375rem; 
-            background-color: #1a202c; 
-        }
-        .action-button, .nav-button, .timer-button { 
-            background-color: #4a5568; 
-            color: white;
-            padding: 0.5rem 1rem;
-            border-radius: 0.375rem; 
-            cursor: pointer;
-            transition: background-color 0.2s ease-in-out;
-            user-select: none; 
-            font-size: 0.875rem; /* text-sm */
-        }
-        .action-button:hover, .nav-button:hover, .timer-button:hover {
-            background-color: #718096;
-        }
-        .nav-button:disabled, .timer-button:disabled {
-            background-color: #2d3748; 
-            cursor: not-allowed;
-            opacity: 0.6;
-        }
-        main { height: calc(100vh - 64px - 45px); }
-        #model-details-container { display: flex; flex-direction: column; height: 100%; }
-        #media-display-area { flex-grow: 1; display: flex; justify-content: center; align-items: center; overflow: hidden; position: relative; }
-        #media-info { min-height: 40px; }
-        .header-controls { 
-            margin-bottom: 1rem; 
-            display: flex; 
-            flex-wrap: wrap; /* Allow wrapping for smaller screens */
-            justify-content: space-between; 
-            align-items: center; 
-            padding-bottom: 0.5rem; 
-            border-bottom: 1px solid #374151;
-            gap: 0.5rem; /* Add gap between control groups */
-        }
-        .timer-controls { display: flex; align-items: center; gap: 0.5rem; }
-        .timer-controls input[type="number"] {
-            width: 60px; 
-            padding: 0.25rem 0.5rem; 
-            border-radius: 0.375rem; 
-            background-color: #2d3748; 
-            color: white;
-            border: 1px solid #4a5568; 
-            text-align: center;
-        }
-        input[type=number]::-webkit-inner-spin-button, 
-        input[type=number]::-webkit-outer-spin-button { 
-          -webkit-appearance: none; 
-          margin: 0; 
-        }
-        input[type=number] {
-          appearance: textfield;
-          -moz-appearance: textfield; 
+
+        .timer-controls label {
+            /* Timer Label Styling */
+            color: var(--text-muted);
+            font-weight: 700;
         }
     </style>
 </head>
+
 <body class="bg-gray-900 text-white min-h-screen flex flex-col">
 
     <header class="bg-gray-800 shadow-md p-4">
@@ -117,13 +334,13 @@
     <main class="flex-grow flex flex-col md:flex-row p-4 gap-4 overflow-hidden">
         <div class="w-full md:w-1/3 bg-gray-800 shadow-lg rounded-lg p-4 flex flex-col overflow-y-auto">
             <div class="header-controls">
-                 <button id="start-global-slideshow-button" class="action-button text-sm">Global Slideshow</button>
-                 <div class="timer-controls">
+                <button id="start-global-slideshow-button" class="action-button text-sm">Global Slideshow</button>
+                <div class="timer-controls">
                     <label for="timer-duration" class="text-sm">Timer (s):</label>
                     <input type="number" id="timer-duration" value="5" min="1" class="text-sm">
                     <button id="play-pause-timer-button" class="timer-button text-sm">Play</button>
-                 </div>
-                 <button id="reindex-library-button" class="action-button text-sm">Re-index Library</button> 
+                </div>
+                <button id="reindex-library-button" class="action-button text-sm">Re-index Library</button>
             </div>
             <h2 class="text-xl font-semibold mb-3 border-b border-gray-700 pb-2">Models</h2>
             <ul id="models-list" class="space-y-1 flex-grow pr-2">
@@ -132,8 +349,9 @@
         </div>
 
         <div id="model-details-container" class="w-full md:w-2/3 bg-gray-800 shadow-lg rounded-lg p-4 flex flex-col">
-            <h2 id="current-model-title" class="text-xl font-semibold mb-2 text-center">Select a model or start Global Slideshow</h2>
-            
+            <h2 id="current-model-title" class="text-xl font-semibold mb-2 text-center">Select a model or start Global
+                Slideshow</h2>
+
             <div id="media-display-area" class="mb-3">
                 <p id="media-placeholder" class="text-gray-500">Media will appear here.</p>
             </div>
@@ -156,4 +374,5 @@
 
     <script src="./renderer.js"></script>
 </body>
+
 </html>
