Fix: Update script path in index.html and refactor renderer.js for improved error handling

--- a/index.html
+++ b/index.html
@@ -376,6 +376,6 @@
         Model Slideshow App | Use ← → for navigation, Space to Play/Pause timer.
     </footer>
 
-    <script src="./renderer.js" type="module"></script>
+    <script src="./renderer/renderer.js" type="module"></script>
 </body>
 </html>
