--- a/index.html
+++ b/index.html
@@ -436,11 +436,21 @@
     </footer>
 
     <!-- Modal for Managing Media Sources -->
-    <div id="sources-modal" class="hidden fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center p-4">
-      <div class="bg-gray-800 rounded-lg shadow-2xl p-6 w-full max-w-2xl max-h-full overflow-y-auto">
+    <div
+      id="sources-modal"
+      class="hidden fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center p-4"
+    >
+      <div
+        class="bg-gray-800 rounded-lg shadow-2xl p-6 w-full max-w-2xl max-h-full overflow-y-auto"
+      >
         <div class="flex justify-between items-center mb-4">
           <h2 class="text-2xl font-semibold">Manage Media Sources</h2>
-          <button id="close-modal-button" class="text-gray-400 hover:text-white text-3xl">&times;</button>
+          <button
+            id="close-modal-button"
+            class="text-gray-400 hover:text-white text-3xl"
+          >
+            &times;
+          </button>
         </div>
         <div id="modal-content">
           <div id="media-sources-container" class="mb-4">
