Feature multiple media directories (#33)
* feat: Allow multiple media directories

This feature allows users to add multiple media directories to the application.

- Adds a new "Add Media Directory" button to the UI.
- Creates a new database table `media_directories` to store the paths.
- Implements an Electron IPC handler that uses the native file dialog to let the user select a directory.
- Refactors the core media scanning logic (`performFullMediaScan`) to accept an array of directories, read them from the new database table, and scan all of them.
- After a new directory is added, the library is automatically re-indexed and the UI is updated with the new content.
- Updates unit tests to align with the refactored scanner function.

* feat: Add media directory management and root file scanning

This feature introduces a comprehensive system for managing media source directories and enhances the scanning capabilities.

- **Directory Management UI**: Adds a "Media Sources" section to the UI where users can view all added directories. Each directory in the list has a checkbox to toggle it on or off for scanning, and a "Remove" button to delete it from the list.

- **Database Enhancements**: The `media_directories` table is updated with an `is_active` column to persist the user's selection. Backend logic is added to handle removing directories and updating their active state.

- **Root File Scanning**: The media scanner is improved to scan for media files directly within the root of each active directory, in addition to scanning its subdirectories. These root files are grouped into a model named after the directory itself.

- **IPC Handlers**: New IPC channels (`remove-media-directory`, `set-directory-active-state`) are implemented to support the new UI functionality.

- **Updated Tests**: Unit tests for the database and media scanner have been expanded to cover all new functionality, ensuring the changes are robust.

* feat: Add media directory management modal and ro

--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
               Play
             </button>
           </div>
-          <button id="reindex-library-button" class="action-button">
-            Re-index Library
+          <button id="manage-sources-button" class="action-button">
+            Manage Sources
           </button>
         </div>
 
@@ -460,6 +460,41 @@
     <footer class="bg-gray-800 text-center p-3 text-sm text-gray-500">
       Model Slideshow App | Use ← → for navigation, Space to Play/Pause timer.
     </footer>
+
+    <!-- Modal for Managing Media Sources -->
+    <div
+      id="sources-modal"
+      class="hidden fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center p-4"
+    >
+      <div
+        class="bg-gray-800 rounded-lg shadow-2xl p-6 w-full max-w-2xl max-h-full overflow-y-auto"
+      >
+        <div class="flex justify-between items-center mb-4">
+          <h2 class="text-2xl font-semibold">Manage Media Sources</h2>
+          <button
+            id="close-modal-button"
+            class="text-gray-400 hover:text-white text-3xl"
+          >
+            &times;
+          </button>
+        </div>
+        <div id="modal-content">
+          <div id="media-sources-container" class="mb-4">
+            <ul id="media-sources-list" class="space-y-1 mt-2">
+              <!-- Media sources will be dynamically inserted here -->
+            </ul>
+          </div>
+          <div class="flex gap-4 mt-4">
+            <button id="add-media-directory-button" class="action-button">
+              Add Media Directory
+            </button>
+            <button id="reindex-library-button" class="action-button">
+              Re-index Library
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="./renderer/renderer.js" type="module"></script>
   </body>
